now compatible with v1.20 - v1.20.4